catalog-grid-v0.2 grid-t-rows removed and verticap gap fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -3,21 +3,18 @@
 .catalog {
   display: grid;
   justify-content: center;
-  gap: 48px;
+  gap: 0 48px;
 
   @media screen and (min-width: 488px) {
     grid-template-columns: repeat(2, $card-width);
-    grid-template-rows: repeat(2, $card-height);
   }
 
   @media screen and (min-width: 768px) {
     grid-template-columns: repeat(3, $card-width);
-    grid-template-rows: repeat(3, $card-height);
   }
 
   @media screen and (min-width: 1024px) {
     grid-template-columns: repeat(4, $card-width);
-    grid-template-rows: repeat(4, $card-height);
   }
 
   &__card {
